# teachingdb

./: .dockerignore  Dockerfile  MANIFEST.in  README.md  Using_the_teachdb_Database_Freestack_Initiative.ipynb  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
src/teachdb/: __init__.py  loader.py  teachdb.py
src/teachdb/config/: schema.yaml  schema.yml
src/teachdb/test/: test_loader.py  test_teachdb.py
