[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teachdb"
version = "0.1.4"
authors = [
    { name="Martin Arroyo", email="martinm.arroyo7@gmail.com" },
]
description = "An in-memory database connection with sample data to facilitate teaching SQL"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSA Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "duckdb",
    "duckdb_engine",
    "jupysql"
]

[tool.setuptools.packages.find]
where = ["src"]
