[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teachdb"
version = "0.2.9"
authors = [
    { name="Martin Arroyo", email="martinm.arroyo7@gmail.com" },
]
description = "An in-memory database connection with sample data to facilitate teaching SQL"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSA Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ipython>=9.4.0,<10.0.0",
    "pandas>=2.3.1,<3.0.0",
    "duckdb>=1.3.2,<2.0.0",
    "duckdb_engine>=0.17.0,<1.0.0",
    "jupysql>=0.11.1,<1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
